k8s/apps/base/homelab/silverbullet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silverbullet
  namespace: silverbullet
spec:
  selector:
    app: silverbullet
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
