k8s/apps/base/homelab/silverbullet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: silverbullet
  namespace: silverbullet
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "notes.mateuszledwon.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: silverbullet
          port: 3000
          weight: 1
